overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minecraft.dev.numerique-interieur.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-server
                port:
                  number: 25565
